cluster/services/vaultwarden/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden
  namespace: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      labels:
        app: vaultwarden
    spec:
      containers:
        - image: vaultwarden/server:latest
          name: vaultwarden
          ports:
            - containerPort: 80
            - containerPort: 3012
          resources:
            limits:
              cpu: 2
              memory: 4Gi
          volumeMounts:
            - mountPath: /data
              name: vaultwarden-claim0
            - mountPath: /.env
              name: .env
              readOnly: true
      hostname: vaultwarden
      restartPolicy: Always
      volumes:
        - name: vaultwarden-claim0
          persistentVolumeClaim:
            claimName: vaultwarden-claim0
        - name: .env
          secret:
            secretName: vaultwarden-secrets
