cluster/services/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/version: latest
  name: vaultwarden
  namespace: services
spec:
  ingressClassName: nginx
  rules:
    - host: vault.bth.wtf
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  number: 3012
            path: /notifications/hub
            pathType: Prefix
          - backend:
              service:
                name: vaultwarden
                port:
                  number: 80
            path: /notifications
            pathType: Prefix
          - backend:
              service:
                name: vaultwarden
                port:
                  number: 80
            path: /hub/negotiate
            pathType: Prefix
          - backend:
              service:
                name: vaultwarden
                port:
                  number: 80
            path: /
            pathType: Prefix
